--- a/apps/server/Cargo.toml
+++ b/apps/server/Cargo.toml
@@ -30,8 +30,11 @@ sqlx = { version = "0.8.5", features = [
 ] }
 
 tokio = { version = "1.45.0", features = ["full"] }
+axum = { version = "0.8.4", features = ["macros"] }
+axum-extra = { version = "0.10.1", features = ["query"] }
+axum_responses = "0.2.3"
+
 async-trait = "0.1.88"
-axum = "0.8.4"
 
 tower-http = { version = "0.6.2", features = ["trace", "cors"] }
 tracing = "0.1.41"
@@ -42,6 +45,5 @@ validator = { version = "0.20.0", features = ["derive"] }
 regex = "1.11.1"
 bcrypt = "0.17.0"
 mailchecker = "6.0.17"
-axum_responses = "0.2.0"
 
 fake = { version = "4.3.0", optional = true }
