feat: :sparkles: Added reddit rust library and docker compose setup for http caching

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -43,3 +43,8 @@ services:
       start_period: 10s
     networks:
       - my_networks
+
+  redis_base:
+    image: redis:latest-alpine
+    networks:
+      - my_networks
