--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,16 @@
 
-# DATABASE VARIABLES --------------------
+# POSTGRES DATABASE VARIABLES --------------------
 
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB_NAME=social-network
 
 POSTGRES_DATABASE_URL=postgres://user:password@postgres_dev:5432/social-network
-POSTGRES_TEST_DATABASE_URL=postgres://user:password@postgres_test:5432/social-network
 
-# SESSION VARIABLES --------------------
+# REDIS DATABASE (CACHE) ------------------------------
 
-JWT_SECRET="my_axum_secret"
-
-ACCESS_SESSION_EXP=15
-REFRESH_SESSION_EXP=30
-
-# SERVER VARIABLES --------------------
-
-ENVIRONMENT=development
-COOKIE_DOMAIN=localhost
-
-BASE_SERVER_URL=http://localhost/
-
-# MAIL VARIABLES --------------------
+REDIS_PASSWORD=password
+REDIS_DATABASE_URL=redis://:password@redis_dev:6379
 
 # CLIENT (FRONTEND) VARIABLES --------------------
 
