feat: :ambulance: Added base redis cache setup

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -45,6 +45,6 @@ services:
       - my_networks
 
   redis_base:
-    image: redis:latest-alpine
+    image: redis:latest
     networks:
       - my_networks
